--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ html, body {
   --frames: #1e1e1d;
   --elems_back: #e7e7e7;
   --shadow: ;
-  --back_07: rgba(231, 231, 231, 0.7);
+  --back_07: rgba(231, 231, 231, 0.8);
   --checkmarks: #0e327a;
 }
 
@@ -24,6 +24,7 @@ html, body {
   --welcome_back: #141414;
   --frames: #919796;
   --elems_back: #262424;
+  --back_07: rgba(42, 43, 45, 0.8);
   --checkmarks: #93abdc;
 }
 
@@ -246,6 +247,22 @@ html, body {
     z-index: 2000;
     box-shadow: 0 0 20px var(--frames);
   }
+
+  /* .small_hr {
+    height: 20px;
+    width: 50px;
+    display: inline;
+    border: none;
+    border-top: 6px double var(--frames);
+  }
+
+  .big_hr {
+    height: 20px;
+    width: 200px;
+    display: inline;
+    border: none;
+    border-top: 6px double var(--frames);
+  } */
 
   #about_block > p {
     line-height: 180%;
@@ -523,7 +540,11 @@ html, body {
 
 }
 
-@media (max-width: 1000px) {
+@media (max-width: 1100px) {
+
+  body {
+    background-color: var(--welcome_back)
+  };
 
   .flexSBMobile {
     display: flex;
@@ -548,7 +569,300 @@ html, body {
     text-align: center;
   }
 
+  #welcome_block {
+    width: 100vw;
+    padding: 0 5vw;
+    /* border: 2px solid red; */
+  }
+
+  #welcome_left {
+    background-color: var(--welcome_back);
+    width: 90vw;
+    height: 50vh;
+    margin: 0 auto;
+  }
+
+  #welcome_left_cover {
+    width: 90vw;
+    text-align: center;
+  }
+
+  #welcome_h1_cover {
+    /* width: 65vw; */
+    /* margin: 0 auto; */
+    margin-top: 15vh;
+  }
+
+  #welcome_hi_emoji {
+    width: 8.5vw;
+    display: inline;
+    transform-origin: bottom right;
+    rotate: 0;
+  }
+
+  #welcome_h1 {
+    font-size: 8.5vw;
+    display: inline;
+    margin-left: 3vw;
+  }
+
+  #welcome_h2 {
+    font-size: 8vw;
+    margin-top: 5vh;
+  }
+
+  #welcome_text {
+    margin-top: 5vh;
+    font-size: 5vw;
+    line-height: 200%;
+  }
+
+  #welcome_right {
+    
+  }
+
+  #welcome_img {
+    width: 90vw;
+  }
  
+  #body_cover {
+    width: 110vw;
+    padding: 5vh 5vw;
+    /* border: 2px solid red; */
+    box-sizing: border-box;
+  }
+
+  #about_block > p {
+    font-size: 4.5vw;
+    line-height: 200%;
+  }
+
+  
+
+  #project_container {
+    height: 70vh;
+    position: relative;
+    margin-left: 5vw;
+    /* display: none; */
+  }
+
+  #projects_block {
+    width: 90vw;
+    overflow: hidden;
+    height: 70vh;
+    position: relative;
+    /* box-sizing: border-box;
+    border: 2px solid red; */
+  }
+
+  #projects_scroll {
+    display: flex;
+    justify-content: left;
+    height: 60vh;
+    position: absolute;
+    left: 0;
+    transition: 0.3s;
+    box-sizing: border-box;
+    /* border: 2px solid green; */
+  }
+
+  .project_card {
+    width: 85vw;
+    margin: 0 2.5vw;
+    height: 55vh;
+    border: 4px solid var(--frames);
+    box-sizing: border-box;
+    padding: 2.5vw;
+  }
+
+  .project_card > h3 {
+    font-size: 6vw;
+    text-align: center;
+  }
+
+  .project_card > img {
+    width: 80vw;
+    margin: 0 auto;
+  }
+
+  .project_card > p {
+    font-size: 5vw;
+  }
+
+  #projects_left_arrow {
+    width: 8vw;
+    height: 10vw;
+    /* background-color: red; */
+    position: absolute;
+    top: 65vh;
+    left: 20vw;
+    background-size: 8vw;
+    background-repeat: no-repeat;
+  }
+
+  #projects_right_arrow {
+    width: 8vw;
+    height: 10vw;
+    /* background-color: green; */
+    position: absolute;
+    top: 65vh;
+    right: 20vw;
+    background-size: 8vw;
+    background-repeat: no-repeat;
+  }
+
+  /* #projects_progress_bar {
+    width: 25vw;
+    height: 10vw;
+    position: absolute;
+    top: 60vh;
+    left: 40vw;
+    display: flex;
+    justify-content: space-around;
+  } */
+
+  /* .progress_points {
+    width: 5vw;
+    height: 5vw;
+    background-color: var(--welcome_back);
+    border: 2px solid var(--frames);
+    border-radius: 10vw;
+  } */
+
+
+
+  #project_full_discription_cover {
+    width: 100vw;
+    height: 100vh;
+    background-color: var(--back_07);
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 5000;
+    display: none;
+  }
+
+  #project_full_discription {
+    width: 90vw;
+    height: 100vh;
+    margin: 0 auto;
+    background-color: var(--welcome_back);
+    overflow: auto;
+  }
+
+  #project_full_discription > img {
+    width: 90vw;
+  }
+
+  #project_full_discription > h3 {
+    font-size: 6vw;
+  }
+
+
+  #project_full_discription > p {
+    font-size: 5vw;
+  }
+
+  .lang_tags {
+    padding: 3vw;
+    background-color: aqua;
+    border-radius: 3vw;
+    margin-left: 5vw;
+  }
+
+  .projects_links {
+    padding: 5vw;
+    border: 3px solid var(--frames);
+    border-radius: 4vw;
+    margin-left: 15vw;
+    line-height: 200%;
+    font-size: 7vw;
+    color: var(--color);
+  }
+
+
+
+
+  #skills_block {
+    margin-top: 10vh;
+  }
+
+  #skills_img_block {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    text-align: center;
+  }
+
+  #skills_img_block > img {
+    width: 25vw;
+    padding: 2.5vw;
+    opacity: 1;
+    /* transition: 2s; */
+  }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  footer {
+    margin-top: 5vh;
+  }
+
+  #footer_box {
+    font-size: 5vw;
+  }
+
+  #footer_contacts > a {
+    text-decoration: none;
+    color: var(--color);
+  }
+
+  #footer_contacts > a > p {
+    background-size: 10vw;
+    padding-left: 15vw;
+    height: 10vw;
+    text-decoration: underline;
+    background-repeat: no-repeat;
+
+  }
+
+
+  #footer_telegram {
+    background-image: url(img/telegram.png);
+  }
+
+  #footer_whatsapp {
+    background-image: url(img/whatsapp.png);
+  }
+
+  #footer_instagram {
+    background-image: url(img/instagram.png);
+  }
+
+  #footer_mail {
+    background-image: url(img/e-mail.png);
+  }
+
+  #footer_menu {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 5vh;
+  }
+
+  #footer_menu > a {
+    /* text-decoration: none; */
+    color: var(--color);
+    /* text-decoration: underline; */
+  }
 
 }
 
