--- a/style.css
+++ b/style.css
@@ -594,7 +594,8 @@ html, body {
 
   #welcome_block_cover {
     width: 110vw;
-    height: 110vh;
+    height: 100vh;
+    margin-top: -5vh;
     background: 
     url(img/3.2.png) 10vw 45vh no-repeat,
     url(img/4.3.png) -50vw 0 no-repeat,
@@ -607,7 +608,7 @@ html, body {
   #settings_block {
     width: 7vw;
     height: 7vw;
-    font-size: 9vw;
+    /* font-size: 9vw; */
     /* color: white;
     border: 2px solid white; */
     display: none;
@@ -615,6 +616,15 @@ html, body {
 
   #settings_block > div {
     text-align: center;
+  }
+
+  #theme_light {
+    font-size: 8vw;
+    padding-top: 5vw;
+  }
+
+  #theme_dark {
+    font-size: 11vw;
   }
 
   #welcome_block {
@@ -656,12 +666,12 @@ html, body {
 
   #welcome_h2 {
     font-size: 8vw;
-    margin-top: 5vh;
+    margin-top: 3vh;
   }
 
   #welcome_text {
-    margin-top: 5vh;
-    font-size: 5vw;
+    margin-top: 3vh;
+    font-size: 4.5vw;
     line-height: 200%;
   }
 
@@ -688,7 +698,7 @@ html, body {
   
 
   #project_container {
-    height: 70vh;
+    height: 80vh;
     position: relative;
     margin-left: 5vw;
     /* display: none; */
@@ -697,7 +707,7 @@ html, body {
   #projects_block {
     width: 90vw;
     overflow: hidden;
-    height: 70vh;
+    height: 80vh;
     position: relative;
     /* box-sizing: border-box;
     border: 2px solid red; */
@@ -706,7 +716,7 @@ html, body {
   #projects_scroll {
     display: flex;
     justify-content: left;
-    height: 60vh;
+    height: 70vh;
     position: absolute;
     left: 0;
     transition: 0.3s;
@@ -742,7 +752,7 @@ html, body {
     height: 10vw;
     /* background-color: red; */
     position: absolute;
-    top: 65vh;
+    top: 75vh;
     left: 20vw;
     background-size: 8vw;
     background-repeat: no-repeat;
@@ -753,7 +763,7 @@ html, body {
     height: 10vw;
     /* background-color: green; */
     position: absolute;
-    top: 65vh;
+    top: 75vh;
     right: 20vw;
     background-size: 8vw;
     background-repeat: no-repeat;
@@ -788,6 +798,17 @@ html, body {
     left: 0;
     z-index: 5000;
     display: none;
+  }
+
+  #project_full_discription_close_button {
+    position: fixed;
+    top: 5vh;
+    right: 5vh;
+    width: 5vh;
+    height: 5vh;
+    background-image: url(img/close.png);
+    background-size: 5vw;
+    background-repeat: no-repeat;
   }
 
   #project_full_discription {
