--- a/style.css
+++ b/style.css
@@ -580,8 +580,8 @@ html, body {
 
   header {
     position: absolute;
-    top: 10vw;
-    right: 0;
+    top: 5vw;
+    right: 5vw;
     height: 7vw;
     width: 7vw;
     /* border: 2px solid red; */
@@ -593,12 +593,12 @@ html, body {
   }
 
   #welcome_block_cover {
-    width: 110vw;
+    width: 100vw;
     height: 100vh;
-    margin-top: -5vh;
+    margin-top: -10vh;
     background: 
-    url(img/3.2.png) 10vw 45vh no-repeat,
-    url(img/4.3.png) -50vw 0 no-repeat,
+    url(img/3.2.webp) 10vw 45vh no-repeat,
+    url(img/4.3.webp) -50vw 0 no-repeat,
     var(--welcome_back) ;
     background-size: 
     90vw,
@@ -629,7 +629,7 @@ html, body {
   }
 
   #welcome_block {
-    width: 100vw;
+    width: 90vw;
     padding: 0 5vw;
     /* border: 2px solid red; */
   }
@@ -681,11 +681,13 @@ html, body {
   } */
 
   #welcome_img {
-    width: 100vw;
+    width: 90vw;
+    height: 110vw;
+    object-fit: contain;
   }
  
   #body_cover {
-    width: 110vw;
+    width: 100vw;
     padding: 5vh 5vw;
     /* border: 2px solid red; */
     box-sizing: border-box;
@@ -699,16 +701,16 @@ html, body {
   
 
   #project_container {
-    height: 80vh;
+    height: 75vh;
     position: relative;
-    margin-left: 5vw;
+    /* margin-left: 5vw; */
     /* display: none; */
   }
 
   #projects_block {
     width: 90vw;
     overflow: hidden;
-    height: 80vh;
+    height: 75vh;
     position: relative;
     /* box-sizing: border-box;
     border: 2px solid red; */
@@ -717,7 +719,7 @@ html, body {
   #projects_scroll {
     display: flex;
     justify-content: left;
-    height: 70vh;
+    height: 75vh;
     position: absolute;
     left: 0;
     transition: 0.3s;
@@ -728,7 +730,7 @@ html, body {
   .project_card {
     width: 85vw;
     margin: 0 2.5vw;
-    height: 65vh;
+    height: 75vh;
     border: 4px solid var(--frames);
     box-sizing: border-box;
     padding: 2.5vw;
@@ -752,9 +754,9 @@ html, body {
     width: 8vw;
     height: 10vw;
     /* background-color: red; */
-    position: absolute;
+    /* position: absolute;
     top: 75vh;
-    left: 20vw;
+    left: 20vw; */
     background-size: 8vw;
     background-repeat: no-repeat;
   }
@@ -763,11 +765,18 @@ html, body {
     width: 8vw;
     height: 10vw;
     /* background-color: green; */
-    position: absolute;
+    /* position: absolute;
     top: 75vh;
-    right: 20vw;
+    right: 20vw; */
     background-size: 8vw;
     background-repeat: no-repeat;
+  }
+
+  #projects_mobile_arrows {
+    width: 50vw;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
   }
 
   /* #projects_progress_bar {
@@ -803,8 +812,8 @@ html, body {
 
   #project_full_discription_close_button {
     position: fixed;
-    top: 5vh;
-    right: 5vh;
+    top: 5vw;
+    right: 0;
     width: 5vh;
     height: 5vh;
     background-image: url(img/close.webp);
@@ -854,7 +863,7 @@ html, body {
 
 
   #skills_block {
-    margin-top: 10vh;
+    margin-top: 20vh;
   }
 
   #skills_img_block {
