--- a/style.css
+++ b/style.css
@@ -549,6 +549,121 @@ html, body {
 
 }
 
+@media (300px <= width <= 400px) {
+  /* #test > span {
+    display: none;
+  } */
+  #w300{
+    /* display: inline; */
+    color: red;
+  }
+}
+
+@media (400px <= width <= 500px) {
+  /* #test > span {
+    display: none;
+  } */
+  #w400{
+    color: red;
+  }
+}
+
+@media (500px <= width <= 600px) {
+  /* #test > span {
+    display: none;
+  } */
+  #w500{
+    color: red;
+  }
+}
+
+@media (600px <= width <= 700px) {
+  /* #test > span {
+    display: none;
+  } */
+  #w600{
+    color: red;
+  }
+}
+
+@media (700px <= width <= 800px) {
+  /* #test > span {
+    display: none;
+  } */
+  #w700{
+    color: red;
+  }
+}
+
+@media (800px <= width <= 900px) {
+  /* #test > span {
+    display: none;
+  } */
+  #w800{
+    color: red;
+  }
+}
+
+@media (900px <= width <= 1000px) {
+  /* #test > span {
+    display: none;
+  } */
+  #w900{
+    color: red;
+  }
+}
+
+@media (1000px <= width <= 1100px) {
+  /* #test > span {
+    display: none;
+  } */
+  #w1000{
+    color: red;
+  }
+}
+@media (1100px <= width <= 1200px) {
+  /* #test > span {
+    display: none;
+  } */
+  #w1100{
+    color: red;
+  }
+}
+@media (1200px <= width <= 1300px) {
+  /* #test > span {
+    display: none;
+  } */
+  #w1200{
+    color: red;
+  }
+}
+@media (1300px <= width <= 1400px) {
+  /* #test > span {
+    display: none;
+  } */
+  #w1300{
+    color: red;
+  }
+}
+@media (1400px <= width <= 1500px) {
+  /* #test > span {
+    display: none;
+  } */
+  #w1400{
+    color: red;
+  }
+}
+@media (1500px <= width <= 1600px) {
+  /* #test > span {
+    display: none;
+  } */
+  #w1500{
+    color: red;
+  }
+}
+
+
+
 @media (max-width: 1100px) {
 
   body {
