--- a/style.css
+++ b/style.css
@@ -39,9 +39,6 @@ html, body {
 /* desctop  */
 @media (min-width: 900px) {
 
- 
-
-
   body {
     overflow-x: hidden;
   }
@@ -130,20 +127,6 @@ html, body {
     display: none;
   }
 
-  /* #theme_light {
-    font-size: 30px;
-    color: #848484;
-    line-height: 50%;
-    padding: 0 10px;
-  }
-
-  #theme_dark {
-    font-size: 35px;
-    color: #848484;
-    line-height: 50%;
-  } */
-
-
   #settings_block > div {
     display: flex;
     justify-content: space-around;
@@ -164,27 +147,6 @@ html, body {
     background-repeat: no-repeat;
     background-position: center;
   }
-
-/* 
-  #theme_light {
-  }
-
-  #theme_dark {
-    font-size: 35px;
-    color: #848484;
-    line-height: 50%;
-  } */
-  
-
-
-
-
-
-
-
-
-
-
 
   @media (min-width: 1200px) {
 
@@ -283,15 +245,6 @@ html, body {
     }
   }
 
-
-
-
-
-
-
-
-
-
   @media (max-width: 1200px) {
 
     #welcome_block_cover {
@@ -309,7 +262,6 @@ html, body {
       400px,
       80vw;
     }
-
   
     #welcome_block {
       max-width: 800px;
@@ -340,12 +292,6 @@ html, body {
     #welcome_h2 {
       font-size: 30px;
     }
-
-
-
-
-
-
 
     #welcome_h1 {
       display: inline;
@@ -378,10 +324,6 @@ html, body {
       font-weight: 700;
     }
 
-
-
-
-
     #welcome_text {
       position: absolute;
       bottom: -500px;
@@ -408,35 +350,6 @@ html, body {
     }
   }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-  /* #laptop_cover {
-    width: 300px;
-    position: absolute;
-    bottom: 100px;
-    left: 100px;
-    perspective: 2500px;
-    perspective-origin: 50% 100%;
-    transform-style: preserve-3d;
-  } */
-
   #body_cover {
     margin-top: 100vh;
     background-image: url(img/light_back_v4.webp);
@@ -444,22 +357,6 @@ html, body {
     z-index: 2000;
     box-shadow: 0 0 20px var(--frames);
   }
-
-  /* .small_hr {
-    height: 20px;
-    width: 50px;
-    display: inline;
-    border: none;
-    border-top: 6px double var(--frames);
-  }
-
-  .big_hr {
-    height: 20px;
-    width: 200px;
-    display: inline;
-    border: none;
-    border-top: 6px double var(--frames);
-  } */
 
   #about_block > p {
     line-height: 180%;
@@ -484,15 +381,11 @@ html, body {
     width: 1000px;
     margin: 0 auto;
     overflow: hidden;
-    position: relative;
-    height: 480px;
   }
 
   #projects_scroll {
-    position: absolute;
-    left: 0;
     transition: 0.3s;
-    height: 460px;
+    margin-left: 0;
   }
   
   .project_card {
@@ -503,7 +396,6 @@ html, body {
     border-radius: 25px;
     background-color: var(--welcome_back);
     box-shadow: 0 0 10px var(--frames);
-    height: 440px;
   }
 
   .project_card > h3 {
@@ -774,8 +666,6 @@ html, body {
     right: 5vw;
     height: 7vw;
     width: 7vw;
-    /* border: 2px solid red; */
-    /* transition: 0.5s; */
   }
 
   #header_settings {
@@ -799,21 +689,12 @@ html, body {
   #settings_block {
     width: 7vw;
     height: 7vw;
-    /* font-size: 9vw; */
-    /* color: white;
-    border: 2px solid white; */
     display: none;
   }
 
   #settings_block > div {
     text-align: center;
   }
-
-  /* #settings_block > div:first-of-type {
-    display: flex;
-    justify-content: space-around;
-    width: 110px;
-  } */
 
   #theme_light {
     width: 7vw;
@@ -837,15 +718,7 @@ html, body {
   #welcome_block {
     width: 90vw;
     padding: 0 5vw;
-    /* border: 2px solid red; */
   }
-
-
-
-
-
-
-
 
   @media (max-width: 500px) {
 
@@ -899,18 +772,11 @@ html, body {
     }
   }
 
-
-
-
-
-
-
   @media (min-width: 500px) {
     #welcome_left {
       width: 90vw;
       height: 40vh;
       margin: 0 auto;
-      /* z-index: 10000; */
     }
   
     #welcome_left_cover {
@@ -948,7 +814,6 @@ html, body {
 
     #welcome_right {
       min-height: 110vw;
-      /* z-index: 1000; */
     }
   
     #welcome_img {
@@ -968,7 +833,6 @@ html, body {
   #body_cover {
     width: 100vw;
     padding: 5vh 5vw;
-    /* border: 2px solid red; */
     box-sizing: border-box;
   }
 
@@ -980,36 +844,25 @@ html, body {
   
 
   #project_container {
-    height: 75vh;
     position: relative;
-    /* margin-left: 5vw; */
-    /* display: none; */
   }
 
   #projects_block {
     width: 90vw;
     overflow: hidden;
-    height: 75vh;
-    position: relative;
-    /* box-sizing: border-box;
-    border: 2px solid red; */
   }
 
   #projects_scroll {
     display: flex;
     justify-content: left;
-    height: 75vh;
-    position: absolute;
-    left: 0;
+    margin-left: 0;
     transition: 0.3s;
     box-sizing: border-box;
-    /* border: 2px solid green; */
   }
 
   .project_card {
     width: 85vw;
     margin: 0 2.5vw;
-    height: 75vh;
     border: 4px solid var(--frames);
     border-radius: 7vw;
     box-sizing: border-box;
@@ -1033,10 +886,6 @@ html, body {
   #projects_left_arrow {
     width: 8vw;
     height: 10vw;
-    /* background-color: red; */
-    /* position: absolute;
-    top: 75vh;
-    left: 20vw; */
     background-size: 8vw;
     background-repeat: no-repeat;
   }
@@ -1044,10 +893,6 @@ html, body {
   #projects_right_arrow {
     width: 8vw;
     height: 10vw;
-    /* background-color: green; */
-    /* position: absolute;
-    top: 75vh;
-    right: 20vw; */
     background-size: 8vw;
     background-repeat: no-repeat;
   }
@@ -1058,26 +903,6 @@ html, body {
     display: flex;
     justify-content: space-between;
   }
-
-  /* #projects_progress_bar {
-    width: 25vw;
-    height: 10vw;
-    position: absolute;
-    top: 60vh;
-    left: 40vw;
-    display: flex;
-    justify-content: space-around;
-  } */
-
-  /* .progress_points {
-    width: 5vw;
-    height: 5vw;
-    background-color: var(--welcome_back);
-    border: 2px solid var(--frames);
-    border-radius: 10vw;
-  } */
-
-
 
   #project_full_discription_cover {
     width: 100vw;
@@ -1134,7 +959,6 @@ html, body {
     background-color: rgb(66, 137, 137);
     border-radius: 3vw;
     margin: 5vw;
-    /* display: block; */
   }
 
   .projects_links {
@@ -1146,9 +970,6 @@ html, body {
     font-size: 7vw;
     color: var(--color);
   }
-
-
-
 
   #skills_block {
     margin-top: 20vh;
@@ -1164,21 +985,7 @@ html, body {
     width: 25vw;
     padding: 2.5vw;
     opacity: 1;
-    /* transition: 2s; */
   }
-
-
-
-
-
-
-
-
-
-
-
-
-
 
   footer {
     margin-top: 5vh;
@@ -1199,9 +1006,7 @@ html, body {
     height: 10vw;
     text-decoration: underline;
     background-repeat: no-repeat;
-
   }
-
 
   #footer_telegram {
     background-image: url(img/telegram.webp);
@@ -1226,9 +1031,7 @@ html, body {
   }
 
   #footer_menu > a {
-    /* text-decoration: none; */
     color: var(--color);
-    /* text-decoration: underline; */
   }
 
 }
